--- a/GUI/EditWindow.xaml
+++ b/GUI/EditWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:edit="clr-namespace:GUI.EditControls"
         xmlns:vm="clr-namespace:GUI.ViewModels"
         mc:Ignorable="d"
-        Title="EditWindow" Height="800" Width="1200"
+        Title="Edit Keypress" Height="600" Width="800"
         x:Name="ThisWindow"
         WindowStartupLocation="CenterOwner"
         Style="{DynamicResource {x:Type Window}}"
