--- a/GUI/EditControls/EditKeyBunchesControl.xaml
+++ b/GUI/EditControls/EditKeyBunchesControl.xaml
@@ -191,7 +191,7 @@
                             <DockPanel Margin="0,0,0,5" Grid.Column="0">
                                 <Label Content="NRIC" VerticalAlignment="Center"/>
                                 <TextBox Text="{Binding PersonToAdd.NRIC, UpdateSourceTrigger=PropertyChanged}" x:Name="NRIC"
-                                             TabIndex="4"/>
+                                         TabIndex="4" MaxLength="4"/>
                             </DockPanel>
                             <DockPanel Margin="0,0,0,5" Grid.Column="1">
                                 <Label Content="Rank" VerticalAlignment="Center"/>
