Fixup squadron edit behaviour

--- a/GUI/EditControls/EditSquadronsControl.xaml
+++ b/GUI/EditControls/EditSquadronsControl.xaml
@@ -81,7 +81,7 @@
                 </Grid.RowDefinitions>
                 <DockPanel Grid.Row="0" Margin="0,0,0,10">
                     <Label Content="Squadron name"/>
-                    <TextBox Text="{Binding SelectedSquadron.Name}"/>
+                    <TextBox Text="{Binding SelectedSquadron.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 </DockPanel>
                 <GroupBox Grid.Row="1" Header="Squadron personnel" Margin="0,0,0,10">
                     <ListBox Grid.Row="1" ItemsSource="{Binding SelectedSquadron.Personnel}" />
